--- a/style.css
+++ b/style.css
@@ -20,7 +20,29 @@ header, footer{
     align-items: center;
     gap: 30px;
 }
+nav{
+    background-color: rgba(61, 61, 13, 0.5);
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
 
+nav a{
+    background-color: rgb(70, 68, 10);
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    padding: 10px;
+    text-decoration: none;
+    box-shadow: 3px 3px 3px 3px rgb(220, 159, 95);
+}
+
+nav a:hover{
+    background: white;
+    color: rgba(0, 0, 0, 0.5);
+    transition: 0.8s;
+    transform: scale(1.05);
+}
 
 img{
     width: 100%;
@@ -45,17 +67,21 @@ img{
     padding: 30px;
 }
 
-.col2img{
-    width: 45%;
+.col2 img{
+    width: 50%;
     margin: auto;
     display: block;
 }
 
 .col2{
     border: 1px dashed rgb(218, 218, 100);
-    width:  450px;
+    width:  47%;
     box-shadow: 5px 5px 5px 5px rgb(173, 173, 173);
     padding: 20px;
+}
+
+.col3{
+    width: 30%;
 }
 
 body{
@@ -77,4 +103,17 @@ body{
 
 #dife{
     border-radius: 50%;
+}
+
+.imagen{
+    width: 25%;
+    margin: auto;
+}
+.imagen img{
+    border-radius: 50%;
+    border: 4px solid rgb(181, 141, 20);
+}
+.imagen img:hover{
+    filter: sepia();
+    transform: scale(1.05);
 }
